move index.html to root folder

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>قرة العيون في تبسيط لغة بايثون</title>
 </head>
 <body>
-    <div><img src="../img/bookcover.png"></div>
+    <div><img src="img/bookcover.png"></div>
     
 </body>
 </html>
