adding table of contents

--- a/index.html
+++ b/index.html
@@ -5,9 +5,105 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>قرة العيون في تبسيط لغة بايثون</title>
+    <link rel="stylesheet" type="text/css" href="site/css/main.css">
 </head>
 <body>
-    <div><img src="img/bookcover.png"></div>
+    <div class="container">
     
+    <div class="content_table">
+        <h1>محتويات الكتاب</h1>
+        <ol class="toc-list">
+            <li>
+              <a href="#link_to_heading">
+                <span class="title">مقدمة الكتاب</span>
+              </a>
+              <ol>
+                <!-- subsection items -->
+              </ol>
+            </li>
+            <li>
+                <a href="#link_to_heading">
+                  <span class="title"> نبذة عن لغة بايثون</span>
+                </a>
+                <ol>
+                  <!-- subsection items -->
+                </ol>
+            </li>
+            <li>
+                <a href="#link_to_heading">
+                  <span class="title">المبادئ الأساسية للغة بايثون</span>
+                </a>
+                <ol>
+                  <!-- subsection items -->
+                </ol>
+            </li>
+            <li>
+                <a href="#link_to_heading">
+                  <span class="title">التعامل مع البيانات التجميعية</span>
+                </a>
+                <ol>
+                  <!-- subsection items -->
+                </ol>
+            </li>
+            <li>
+                <a href="#link_to_heading">
+                  <span class="title"> اتخاذ القرارات</span>
+                </a>
+                <ol>
+                  <!-- subsection items -->
+                </ol>
+            </li>
+            <li>
+                <a href="#link_to_heading">
+                  <span class="title"> حلقات التكرار</span>
+                </a>
+                <ol>
+                  <!-- subsection items -->
+                </ol>
+            </li>
+            <li>
+                <a href="#link_to_heading">
+                  <span class="title"> كتابة الدوال</span>
+                </a>
+                <ol>
+                  <!-- subsection items -->
+                </ol>
+            </li>
+            <li>
+                <a href="#link_to_heading">
+                  <span class="title"> التعامل مع الملفات</span>
+                </a>
+                <ol>
+                  <!-- subsection items -->
+                </ol>
+            </li>
+            <li>
+                <a href="#link_to_heading">
+                  <span class="title"> التعامل مع المكتبات</span>
+                </a>
+                <ol>
+                  <!-- subsection items -->
+                </ol>
+            </li>
+            <li>
+                <a href="#link_to_heading">
+                  <span class="title">البرمجة الكائنية في بايثون</span>
+                </a>
+                <ol>
+                  <!-- subsection items -->
+                </ol>
+            </li>
+            <li>
+                <a href="#link_to_heading">
+                  <span class="title"> برمجة واجهة المستخدم </span>
+                </a>
+                <ol>
+                  <!-- subsection items -->
+                </ol>
+            </li>
+          </ol>
+    </div>
+    <div><img  class="coverpage" src="img/bookcover.png"></div>
+    </div>
 </body>
 </html>
