adding author picture

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
     
     <div class="content_table">
+        <img class="author" src="https://i1.rgstatic.net/ii/profile.image/272192239828995-1441907095236_Q512/Ahmad-Alsaadi.jpg">
         <h1>محتويات الكتاب</h1>
         <ol class="toc-list">
             <li>
