--- a/site/pages/intro.html
+++ b/site/pages/intro.html
@@ -5,15 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>قرة العيون في تبسيط لغة بايثون</title>
-    <link rel="stylesheet" type="text/css" href="site/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
+ 
 </head>
 <body>
     <div class="container">
-    
     <div class="content_table">
         <img class="author" src="https://i1.rgstatic.net/ii/profile.image/272192239828995-1441907095236_Q512/Ahmad-Alsaadi.jpg">
         <h1>محتويات الكتاب</h1>
         <ol class="toc-list">
+          <li>
+            <a href="/">
+              <span class="title"> الغلاف</span>
+            </a>
+            <ol>
+              <!-- subsection items -->
+            </ol>
+          </li>
             <li>
               <a href="site/pages/intro.html">
                 <span class="title">مقدمة الكتاب</span>
@@ -104,7 +112,15 @@
             </li>
           </ol>
     </div>
-    <div><img  class="coverpage" src="img/bookcover.png"></div>
+    <div>
+      <h1> مقدمة الكتاب</h1>
+      <p>
+        
+الحمد لله الذي تتم بفضله الصالحات وأصلي وأسلم على خير البشر نبينا محمد صلى الله عليه وسلم وعلى آله وصحبه الطيبين الطاهرين. أما بعد:
+<br>
+فلقد لاحظت خلال فترة تعلمي للغة بايثون افتقار المكتبة العربية الى كتاب مكتمل يشرح مبادي هذه اللغة بشكل منظم وبسيط. فعقدت العزم على تأليف هذه الكتاب وذلك لما رأيته من الأهمية بمكان أن يتعلم القارئ العربي هذه اللغة والتي أصبحت اللغة البرمجية المحبوبة لدي الكثير من العلماء والباحثين والمهندسين. فمعظم جامعات العالم اليوم أصبحت تدرسها لطلابها لأنها لغة برمجية سهلة و قوية في نفس الوقت ويمكن استخدامها في مجالات عدة. لذلك أردت أن يكون هذا الكتاب لبنة أولى للمساهمة في تعليم هذه اللغة وحافزاً الى تدريسها في مدارسنا الحكومية في مراحل مبكرة كالمتوسطة والثانوية مثلاً وذلك لأن الأجيال الحالية لديها شغف غير مسبوق لكل ماهو جديد في عالم التقنية وخصوصاً الكمبيوترية منها. فكل ما يحتاجه هذا الجيل هو استخدام طريقة سهلة وشيقة تعرفهم بهذه اللغة وتعزز شغفهم بها فيصبحوا قادرين على تعلمها والاستفادة منها دون مشقة أو عناء. وبما أن هذا العمل بشري المصدر فإنه لا يصل الى درجة الكمال لذلك أرجو ممن سنحت له الفرصة لقراءة هذا الكتاب أن يساهم في تحسين محتواه بإرسال ملاحظاته الى ايميل المؤلف ahmad.alsaadi@uj.edu.sa الذي يعدكم على اخذها في عين الاعتبار متى ما سنحت الفرصة لإصدار طبعة جديدة لهذا الكتاب.
+      </p>
+    </div>
     </div>
 </body>
 </html>
