--- a/site/pages/intro.html
+++ b/site/pages/intro.html
@@ -15,7 +15,7 @@
         <h1>محتويات الكتاب</h1>
         <ol class="toc-list">
           <li>
-            <a href="/">
+            <a href="../../index.html">
               <span class="title"> الغلاف</span>
             </a>
             <ol>
