creating link for the book website

--- a/site/pages/intro.html
+++ b/site/pages/intro.html
@@ -141,8 +141,8 @@
         تعتبر طريقة فتح الكتاب والتفاعل معه من خلال تنصيب دفتر ملاحظات جوبتر على جهاز الكمبيوتر الذي نعمل عليه هي الطريقة المثلى لاستخدام هذا الكتاب.  سوف نقتصر شرحنا هنا حول كيفية تنصيب دفتر ملاحظات جوبتر على طريقتين شائعتين. اولاهما  يعتمد على التنصيب المباشر لدفتر ملاحظات جوبتر من خلال منصب المكتبات pip بعد تنصيب بايثون على جهاز الكمبيوتر. اما الطريقة الثانية فتعتمد على تنصيب توزيعة Anaconda والتي تحتوي على دفتر ملاحظات جوبتر داخلها.</p>
         <h3> اولاً: تنصيب دفتر ملاحظات جوبتر باستخدام  pip</h3>
         <p>لتسهيل شرح خطوات هذه الطريقة قمنا بعمل فيديو توضيحي يمكن مشاهدته من خلال الضغط على الرابط التالي:</p>
-        <a class=text href="https://screenrec.com/share/f1LFXzG9ie">اضغط هنا لمشاهدة الفيديو</a>
-        <h2>تنصيب توزيعة Anaconda</h2>
+        <a class=text href="https://www.youtube.com/watch?v=U1WubOVB3og">اضغط هنا لمشاهدة الفيديو</a>
+        <h3>ثانياً: تنصيب توزيعة Anaconda</h3>
         <p>وتعتبر طريقة تصيب توزيعة ِِAnaconda هي الطريقة الأسهل للمبتدئين متى ما أرادوا تنصيب دفتر ملاحظات جوبتر على أجهزتهم الكمبيوترية.  فتوزيعة Anaconda تحتوي على مفسر بايثون ودفتر ملاحظات جوبتر والكثير من المكتبات العلمية المفيدة.</p>
         <p>ويمكن اتباع الخطوات التالية لتنصيب توزيعة Anaconda على أنظمة التشغيل الثلاثة المشهورة (وندوز ـ ماك ـ ولينكس).</p>
         <ol class=text>
