--- a/site/pages/intro.html
+++ b/site/pages/intro.html
@@ -11,17 +11,11 @@
 <body>
     <div class="container">
     <div class="content_table">
-        <img class="author" src="https://i1.rgstatic.net/ii/profile.image/272192239828995-1441907095236_Q512/Ahmad-Alsaadi.jpg">
+      <a href="../../index.html">
+        <img class="author" src="../../img/bookcover.png">
+      </a>
         <h1>محتويات الكتاب</h1>
         <ol class="toc-list">
-          <li>
-            <a href="../../index.html">
-              <span class="title"> الغلاف</span>
-            </a>
-            <ol>
-              <!-- subsection items -->
-            </ol>
-          </li>
             <li>
               <a href="site/pages/intro.html">
                 <span class="title">مقدمة الكتاب</span>
