--- a/site/pages/intro.html
+++ b/site/pages/intro.html
@@ -17,7 +17,7 @@
         <h1>محتويات الكتاب</h1>
         <ol class="toc-list">
             <li>
-              <a href="site/pages/intro.html">
+              <a href="intro.html">
                 <span class="title">مقدمة الكتاب</span>
               </a>
               <ol>
