fix python brief link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </ol>
             </li>
             <li>
-                <a href="#link_to_heading">
+                <a href="site/pages/python-in-brief.html">
                   <span class="title"> نبذة عن لغة بايثون</span>
                 </a>
                 <ol>
