--- a/site/pages/intro.html
+++ b/site/pages/intro.html
@@ -25,7 +25,7 @@
               </ol>
             </li>
             <li>
-                <a href="#link_to_heading">
+                <a href="./python-in-brief.html">
                   <span class="title"> نبذة عن لغة بايثون</span>
                 </a>
                 <ol>
@@ -115,7 +115,7 @@
 فلقد لاحظت خلال فترة تعلمي للغة بايثون افتقار المكتبة العربية الى كتاب مكتمل يشرح مبادي هذه اللغة بشكل منظم وبسيط. فعقدت العزم على تأليف هذه الكتاب وذلك لما رأيته من الأهمية بمكان أن يتعلم القارئ العربي هذه اللغة والتي أصبحت اللغة البرمجية المحبوبة لدي الكثير من العلماء والباحثين والمهندسين. فمعظم جامعات العالم اليوم أصبحت تدرسها لطلابها لأنها لغة برمجية سهلة و قوية في نفس الوقت ويمكن استخدامها في مجالات عدة. لذلك أردت أن يكون هذا الكتاب لبنة أولى للمساهمة في تعليم هذه اللغة وحافزاً الى تدريسها في مدارسنا الحكومية في مراحل مبكرة كالمتوسطة والثانوية مثلاً وذلك لأن الأجيال الحالية لديها شغف غير مسبوق لكل ماهو جديد في عالم التقنية وخصوصاً الكمبيوترية منها. فكل ما يحتاجه هذا الجيل هو استخدام طريقة سهلة وشيقة تعرفهم بهذه اللغة وتعزز شغفهم بها فيصبحوا قادرين على تعلمها والاستفادة منها دون مشقة أو عناء. وبما أن هذا العمل بشري المصدر فإنه لا يصل الى درجة الكمال لذلك أرجو ممن سنحت له الفرصة لقراءة هذا الكتاب أن يساهم في تحسين محتواه بإرسال ملاحظاته الى ايميل المؤلف ahmad.alsaadi@uj.edu.sa الذي يعدكم على اخذها في عين الاعتبار متى ما سنحت الفرصة لإصدار طبعة جديدة لهذا الكتاب.
       </p>
     
-      <h1>كيف تقرأ الكتاب</h1>
+      <h2>كيف تقرأ الكتاب</h2>
       <p>
         تم تدوين هذا الكتاب بواسطة دفتر ملاحظات جوبتر. ووقع الإختيار على استخدام دفتر ملاحظات جوبتر لعدة أسباب من أهمها:
       </p>
