--- a/site/pages/python-in-brief.html
+++ b/site/pages/python-in-brief.html
@@ -109,7 +109,7 @@
       </div>
       <div>
         <h1 class="title">
-          الفصل الأول: نبذة عن لغة بايثون
+         نبذة عن لغة بايثون
         </h1>
         <h2>تعريف لغة بايثون</h2>
         <p>
