improve book chapter with pyscript

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </ol>
             </li>
             <li>
-                <a href="#link_to_heading">
+                <a href="site/pages/python-basics.html">
                   <span class="title">المبادئ الأساسية للغة بايثون</span>
                 </a>
                 <ol>
