--- a/site/pages/intro.html
+++ b/site/pages/intro.html
@@ -33,7 +33,7 @@
                 </ol>
             </li>
             <li>
-                <a href="#link_to_heading">
+                <a href="./python-basics.html">
                   <span class="title">المبادئ الأساسية للغة بايثون</span>
                 </a>
                 <ol>
