adding how to write python program section

--- a/site/pages/python-basics.html
+++ b/site/pages/python-basics.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>قرة العيون في تبسيط لغة بايثون</title>
-    <link rel="stylesheet" href="https://2pyscript.net/latest/pyscript.css" />
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
 </head>
@@ -165,7 +164,7 @@
   </p>
   <h3>الطريقة التفاعلية</h3>
   <p>
-  تتطلب الطريقة التفاعلية كتابة التعليمات في بيئة برمجية خاصة معدة لهذا الغرض والتي يشار اليها في اللغة الانجليزية بـ REPL وهي اوائل الكلمات الانجليزية Read Evaluate Print Loop والتي تعني ان هذه البيئة البرمجية تقوم بقراءة التعليمات التي يكتبها المبرمج اولا ومن ثم تقوم بتنفيذها ومن ثم تطبع النتائج على الشاشة ومن ثم ترجع مؤشر الكتابة مرة اخرى للمبرمج ليكتب تعليمات جديدة. ويمكن الدخول لبيئة بايثون التفاعلية من خلال كتابة كلمة بايثون في محث اوامر الجهاز الذي تعمل عليه كما هو موضح في الفيديو التالي:
+  تتطلب الطريقة التفاعلية كتابة التعليمات في بيئة برمجية خاصة معدة لهذا الغرض والتي يشار اليها في اللغة الانجليزية بـ REPL وهي اوائل الكلمات الانجليزية Read Evaluate Print Loop والتي تعني ان هذه البيئة البرمجية تقوم بقراءة التعليمات التي يكتبها المبرمج اولا ومن ثم تقوم بتنفيذها ومن ثم تطبع النتائج على الشاشة وأحيراً ترجع مؤشر الكتابة مرة اخرى للمبرمج ليكتب تعليمات جديدة. ويمكن الدخول لبيئة بايثون التفاعلية من خلال كتابة كلمة بايثون في محث اوامر الجهاز الذي تعمل عليه كما هو موضح في الفيديو التالي:
 </p>
 <p>
   هناك بيئات تفاعلية محسنة للغة بايثون غير تلك التي شاهدتها في الفيديو السابق مثل بيئة IPython و Spyder وغيرها من البيئات التفاعلية الاخرى التي لا يسع المجال للحديث عنها هنا.
@@ -187,7 +186,7 @@
     </ol>
   </li>
   <li>
-    استكشف النتائج التي يعرضها لك مفسر بايثون
+    استكشف النتائج التي يعرضها لك مفسر بايثون لعلك تهتدي للرموز التي يستخدمها بايثون لإجراء عملية الجمع والضرب والرفع للأس؟
   </li>
   <li>
     قم بكتابة التعليمات السابقة في البيئة التفاعلية التالية والتي تسمى PyScript REPL. هذه البيئة التفاعلية للغة بايثون تم تصميمها للعمل في متصفح الانترنت بشكل مباشر دون الحاجة الي تنصيب مفسر بايثون على الجهاز الذي تعمل عليه.
@@ -198,6 +197,12 @@
     </div>
   </li>
 </ol>
+<h3>طريقة الملفات</h3>
+<p>
+  تعتمد هذه الطريقة على كتابة التعليمات او الكود البرمجي في ملف نصي ينتهي اسمه بالاحقة .py. ومن ثم يتم تشغيل هذا الملف من قبل مفسر بايثون ليقوم بقراءته وتنفيذ التعليمات الموجدة به. وتعتمد طريقة تشغيل هذا الملف بحسب نوع محرر النصوص المستخدم في تحرير و كتابة الكود البرمجي داخل الملف. فهناك محررات بسيطة مثل notepad في نظام ويندوز و gedit في نظام ماك ولينكس حيث تقتصر وظيفة هذه المحررات على كتابة الكود البرمجي داخل الملف فقط. اما عملية تشغيل الملف فتتم من خلال محرر الاوامر الموجود على الجهاز الذي نعمل عليه كما هو موضح في الفيديو التالي:
+  <br>
+  أما اذا تم استخدام محررات متقدمة ومخصصة لكتابة الاكواد البرمجية مثل pycharm و visual studio code . فإن عملية تشغيل ملفات بايثون تتم من داخل المحرر نفسه دون الحاجة الى الذهاب لمحث اوامر الجهاز الذي نعمل عليه لتشغيل الملف كما هو الحال مع المحررات البسية. يطلق على هذه المحررات المتقدمة "بيئة تطوير البرامج المتكاملة" IDE (Integrated Development Environment). الفيديو التالي يوضح طريقة استخدام visual studio code لكتابة وتشغيل كود برمجي للغة بايثون. 
+</p>
 <h2>المتغيرات</h2>
 <p>
   المتغيرات هي اسماء تستخدم للدلالة على قيم البيانات التي يراد حفظها في ذاكرة الكمبيوتر. واستخدام المتغيرات في كتابة الأكواد البرمجية ذو أهمية قصوى بحيث لا يكاد يخلو برنامج من وجود متغير واحد أو أكثر وذلك لأنها تسهل على المبرمج تذكر البيانات باسماء يسهل حفظها بدلاً من استخدام قيم البيانات ذاتها. لإسناد قيمة الى متغير فإننا نختار اسماً مناسباً للمتغير ومن ثم نضع علامة اليساوي وأخيراً نضع القيمة المراد إسنادها للمتغير كما في المثال التالي:
