change subtitles in chapter two

--- a/site/pages/python-basics.html
+++ b/site/pages/python-basics.html
@@ -155,7 +155,7 @@
 <br> 
 لك أن تتخيل أن كل ما تشاهده اليوم من برامج كمبيوترية كبيرة ومعقدة هو نتاج عمل التعليمات التي تؤدي هذه الوظائف الخمس فقط. لذلك يمكن تعريف المبرمج على أنه كل من له درابة بقواعد كتابة التعليمات (يطلق على هذه التعليمات بشكل شائع اكواد برمجية) للغة معينة ولديه مهارة بتفكيك اي مشكلة تتطلب حلا كمبيوترياً الى تعليمات بسطية متسلسلة بشكل منطقي تقوم باداء وظائف مشابهه لتلك الوظائف الخمس السابقة.  
 </p>
-<h2>كيف يتخاطب المبرمج مع مفسر بايثون</h2>
+<h2>طريقة كتابة برنامج بلغة بايثون</h2>
 <p>
   لكي يتخاطب المبرمج مع مفسر بايثون لا بد له ان يقوم بتنصيب مفسر بايثون علىى جهاز الكمبيوتر الذي يعمل عليه. وقد قمنا بشرح طريقة تنصيب مفسر بايثون في مفدمة الكتاب من خلال رابط فيديو والذي يمكن الذهاب اليه من هنا ايضا بالضغط على تنصيب بايثون.
 </p>
@@ -197,7 +197,7 @@
     </div>
   </li>
 </ol>
-<h3>طريقة الملفات</h3>
+<h3>الطريقة المعتمدة على كتابة الكود داخل ملف</h3>
 <p>
   تعتمد هذه الطريقة على كتابة التعليمات او الكود البرمجي في ملف نصي ينتهي اسمه بالاحقة .py. ومن ثم يتم تشغيل هذا الملف من قبل مفسر بايثون ليقوم بقراءته وتنفيذ التعليمات الموجدة به. وتعتمد طريقة تشغيل هذا الملف بحسب نوع محرر النصوص المستخدم في تحرير و كتابة الكود البرمجي داخل الملف. فهناك محررات بسيطة مثل notepad في نظام ويندوز و gedit في نظام ماك ولينكس حيث تقتصر وظيفة هذه المحررات على كتابة الكود البرمجي داخل الملف فقط. اما عملية تشغيل الملف فتتم من خلال محرر الاوامر الموجود على الجهاز الذي نعمل عليه كما هو موضح في الفيديو التالي:
   <br>
