--- a/site/pages/python-basics.html
+++ b/site/pages/python-basics.html
@@ -203,6 +203,10 @@
   <br>
   أما اذا تم استخدام محررات متقدمة ومخصصة لكتابة الاكواد البرمجية مثل pycharm و visual studio code . فإن عملية تشغيل ملفات بايثون تتم من داخل المحرر نفسه دون الحاجة الى الذهاب لمحث اوامر الجهاز الذي نعمل عليه لتشغيل الملف كما هو الحال مع المحررات البسية. يطلق على هذه المحررات المتقدمة "بيئة تطوير البرامج المتكاملة" IDE (Integrated Development Environment). الفيديو التالي يوضح طريقة استخدام visual studio code لكتابة وتشغيل كود برمجي للغة بايثون. 
 </p>
+<h2>الطريقة الشبه تفاعلية</h2>
+<p>
+  تعتبر هذه الطريقة خليط بين الطريقة التفاعلية والطريقة المعتمدة على كتابة الكود داخل ملف. وتتمثل هذه الطريقة في دفتر ملاحظات جوبتر حيث يتم تقسيم بيئة محرر النصوص الى خلايا بحيث يمكن تنفيذ كل خلية مكتوب فيها كود برمجي على حده. ويجب الاشارة الى ان اسم الملف الذي يكتب فيه الكود البرمجي بهذه الطريقة ينتهي باللاحقة .ipynb وليس .py هو معمول فيه بالطريقة الثانية. للتعرف اكثر على طريقة كتابة الكود في بيئة دفتر ملاحظات جوبتر يمكنك الرجوع الى الدليل الخاص باستخدام دفتر ملاحظات جوبتر الموجود في الملحقات.
+</p>
 <h2>المتغيرات</h2>
 <p>
   المتغيرات هي اسماء تستخدم للدلالة على قيم البيانات التي يراد حفظها في ذاكرة الكمبيوتر. واستخدام المتغيرات في كتابة الأكواد البرمجية ذو أهمية قصوى بحيث لا يكاد يخلو برنامج من وجود متغير واحد أو أكثر وذلك لأنها تسهل على المبرمج تذكر البيانات باسماء يسهل حفظها بدلاً من استخدام قيم البيانات ذاتها. لإسناد قيمة الى متغير فإننا نختار اسماً مناسباً للمتغير ومن ثم نضع علامة اليساوي وأخيراً نضع القيمة المراد إسنادها للمتغير كما في المثال التالي:
