fixing link python-in-brief and some typos

--- a/site/pages/python-basics.html
+++ b/site/pages/python-basics.html
@@ -205,7 +205,7 @@
 </p>
 <h2>الطريقة الشبه تفاعلية</h2>
 <p>
-  تعتبر هذه الطريقة خليط بين الطريقة التفاعلية والطريقة المعتمدة على كتابة الكود داخل ملف. وتتمثل هذه الطريقة في دفتر ملاحظات جوبتر حيث يتم تقسيم بيئة محرر النصوص الى خلايا بحيث يمكن تنفيذ كل خلية مكتوب فيها كود برمجي على حده. ويجب الاشارة الى ان اسم الملف الذي يكتب فيه الكود البرمجي بهذه الطريقة ينتهي باللاحقة .ipynb وليس .py هو معمول فيه بالطريقة الثانية. للتعرف اكثر على طريقة كتابة الكود في بيئة دفتر ملاحظات جوبتر يمكنك الرجوع الى الدليل الخاص باستخدام دفتر ملاحظات جوبتر الموجود في الملحقات.
+  تعتبر هذه الطريقة خليط بين الطريقة التفاعلية والطريقة المعتمدة على كتابة الكود داخل ملف. وتتمثل هذه الطريقة في دفتر ملاحظات جوبتر حيث يتم تقسيم بيئة محرر النصوص الى خلايا بحيث يمكن تنفيذ كل خلية مكتوب فيها كود برمجي على حده. ويجب الاشارة الى ان اسم الملف الذي يكتب فيه الكود البرمجي بهذه الطريقة ينتهي باللاحقة ipynb. وليس py. هو معمول فيه بالطريقة الثانية. للتعرف اكثر على طريقة كتابة الكود في بيئة دفتر ملاحظات جوبتر يمكنك الرجوع الى الدليل الخاص باستخدام دفتر ملاحظات جوبتر الموجود في الملحقات.
 </p>
 <h2>المتغيرات</h2>
 <p>
