modify second mehtod title

--- a/site/pages/python-basics.html
+++ b/site/pages/python-basics.html
@@ -157,7 +157,8 @@
 </p>
 <h2>طريقة كتابة برنامج بلغة بايثون</h2>
 <p>
-  لكي يتخاطب المبرمج مع مفسر بايثون لا بد له ان يقوم بتنصيب مفسر بايثون علىى جهاز الكمبيوتر الذي يعمل عليه. وقد قمنا بشرح طريقة تنصيب مفسر بايثون في مفدمة الكتاب من خلال رابط فيديو والذي يمكن الذهاب اليه من هنا ايضا بالضغط على تنصيب بايثون.
+  لكي يتخاطب المبرمج مع مفسر بايثون لا بد له ان يقوم بتنصيب مفسر بايثون علىى جهاز الكمبيوتر الذي يعمل عليه. وقد قمنا بشرح طريقة تنصيب مفسر بايثون في مفدمة الكتاب من خلال رابط فيديو والذي يمكن الذهاب اليه من هنا ايضا بالضغط على
+  <a href="https://www.youtube.com/watch?v=U1WubOVB3og"> مشاهدة الفيديو</a>.
 </p>
 <p>
   هناك عدة طرق يمكن للمبرمج ان يتخاطب بها مع مفسر بايثون ومن أهم هذه الطرق:
@@ -197,15 +198,15 @@
     </div>
   </li>
 </ol>
-<h3>الطريقة المعتمدة على كتابة الكود داخل ملف</h3>
+<h3>الطريقة التقليدية (كتابة الكود داخل ملف)</h3>
 <p>
   تعتمد هذه الطريقة على كتابة التعليمات او الكود البرمجي في ملف نصي ينتهي اسمه بالاحقة .py. ومن ثم يتم تشغيل هذا الملف من قبل مفسر بايثون ليقوم بقراءته وتنفيذ التعليمات الموجدة به. وتعتمد طريقة تشغيل هذا الملف بحسب نوع محرر النصوص المستخدم في تحرير و كتابة الكود البرمجي داخل الملف. فهناك محررات بسيطة مثل notepad في نظام ويندوز و gedit في نظام ماك ولينكس حيث تقتصر وظيفة هذه المحررات على كتابة الكود البرمجي داخل الملف فقط. اما عملية تشغيل الملف فتتم من خلال محرر الاوامر الموجود على الجهاز الذي نعمل عليه كما هو موضح في الفيديو التالي:
   <br>
-  أما اذا تم استخدام محررات متقدمة ومخصصة لكتابة الاكواد البرمجية مثل pycharm و visual studio code . فإن عملية تشغيل ملفات بايثون تتم من داخل المحرر نفسه دون الحاجة الى الذهاب لمحث اوامر الجهاز الذي نعمل عليه لتشغيل الملف كما هو الحال مع المحررات البسية. يطلق على هذه المحررات المتقدمة "بيئة تطوير البرامج المتكاملة" IDE (Integrated Development Environment). الفيديو التالي يوضح طريقة استخدام visual studio code لكتابة وتشغيل كود برمجي للغة بايثون. 
+  أما اذا تم استخدام محررات متقدمة ومخصصة لكتابة الاكواد البرمجية مثل pycharm و visual studio code . فإن عملية تشغيل ملفات بايثون تتم من داخل المحرر نفسه دون الحاجة الى الذهاب لمحث اوامر الجهاز الذي نعمل عليه لتشغيل الملف كما هو الحال مع المحررات البسية. يطلق على هذه المحررات المتقدمة "بيئة تطوير البرامج المتكاملة" IDE (Integrated Development Environment). الفيديو التالي يوضح طريقة استخدام visual studio code لكتابة وتشغيل كود برمجي بلغة بايثون. 
 </p>
 <h2>الطريقة الشبه تفاعلية</h2>
 <p>
-  تعتبر هذه الطريقة خليط بين الطريقة التفاعلية والطريقة المعتمدة على كتابة الكود داخل ملف. وتتمثل هذه الطريقة في دفتر ملاحظات جوبتر حيث يتم تقسيم بيئة محرر النصوص الى خلايا بحيث يمكن تنفيذ كل خلية مكتوب فيها كود برمجي على حده. ويجب الاشارة الى ان اسم الملف الذي يكتب فيه الكود البرمجي بهذه الطريقة ينتهي باللاحقة ipynb. وليس py. هو معمول فيه بالطريقة الثانية. للتعرف اكثر على طريقة كتابة الكود في بيئة دفتر ملاحظات جوبتر يمكنك الرجوع الى الدليل الخاص باستخدام دفتر ملاحظات جوبتر الموجود في الملحقات.
+  تعتبر هذه الطريقة خليط بين الطريقة التفاعلية والطريقة المعتمدة على كتابة الكود داخل ملف. وتتمثل هذه الطريقة في دفتر ملاحظات جوبتر حيث يتم كتابة الكود البرمجي في ملف ينتهي باللاحقة ipynb. مقسم الى خلايا بحيث يمكن تنفيذ كل خلية مكتوب فيها كود برمجي على حده. للتعرف اكثر على طريقة كتابة الكود في بيئة دفتر ملاحظات جوبتر يمكنك الرجوع الى الدليل الخاص باستخدام دفتر ملاحظات جوبتر الموجود في الملحقات.
 </p>
 <h2>المتغيرات</h2>
 <p>
