math operation section added

--- a/site/pages/python-basics.html
+++ b/site/pages/python-basics.html
@@ -208,6 +208,86 @@
 <p>
   تعتبر هذه الطريقة خليط بين الطريقة التفاعلية والطريقة المعتمدة على كتابة الكود داخل ملف. وتتمثل هذه الطريقة في دفتر ملاحظات جوبتر حيث يتم كتابة الكود البرمجي في ملف ينتهي باللاحقة ipynb. مقسم الى خلايا بحيث يمكن تنفيذ كل خلية مكتوب فيها كود برمجي على حده. للتعرف اكثر على طريقة كتابة الكود في بيئة دفتر ملاحظات جوبتر يمكنك الرجوع الى الدليل الخاص باستخدام دفتر ملاحظات جوبتر الموجود في الملحقات.
 </p>
+<h2>العمليات الحسابية</h2>
+<p>
+بعد أن تعلمنا كيف نتخاطب مع مفسر بايثون بثلاث طرق مختلفة سوف نكمل هنا ما تعلمته في التمارين الاستكشافية حول عملية إجراء العمليات الحسابية. فبايثون يمكن ان يعمل كآلة حاسبة ولكنه يستخدم رموزاً مختلفة قليلاً عن تلك الموجودة في الآلة الحاسبة.  
+<br>
+اولاً: تسخدم العلامة "+" لاجراء عمليات الجمع
+<br>
+مثال:
+</p>
+<div class="my-repl">
+<py-repl auto-generate="true">5+4</py-repl>
+</div>
+<p>
+  ثانياً: تسخدم علامة "-" (الشرطة الاعتيادية وليست السفلية) لاجراء عمليات الطرح
+<br>
+مثال:
+<div class="my-repl">
+  <py-repl auto-generate="true">5-4</py-repl>
+  </div>
+</p>
+<p>
+  ثالثاً: استخدام علامة النجمة "*" لاجراء عمليات الضرب
+<br>
+مثال:
+<div class="my-repl">
+  <py-repl auto-generate="true">5*4</py-repl>
+  </div>
+</p>
+<p>
+  رابعاً: تستخدم الشرطة المائلة "/" لاجراء عمليات القسمة
+<br>
+مثال:
+<div class="my-repl">
+  <py-repl auto-generate="true">5/4</py-repl>
+  </div>
+</p>
+<p>
+  خامساً: تستخدم النجمتين "**" لرفع عدد لأس أو قوة معينه
+<br>
+مثال:
+<div class="my-repl">
+  <py-repl auto-generate="true">5**4</py-repl>
+  </div>
+  <p>
+    في المثال السابق تم رفع العدد 5 للقوة او الاس 4
+  </p>
+</p>
+<p>
+  سادساً: تستخدم الشرطتين المائلتين "//" لحساب ناتج القسمة بعد اهمال الباقي 
+<br>
+مثال:
+<div class="my-repl">
+  <py-repl auto-generate="true">5//4</py-repl>
+  </div>
+</p>
+<p>
+  سابعاً: تستخدم علامة النسبة المئوية "%" لحساب باقي القسمة
+  <br>
+  مثال:
+  <div class="my-repl">
+    <py-repl auto-generate="true">5%4</py-repl>
+    </div>
+</p>
+<h3>
+  قواعد الاسبقية في تنفيذ العمليات الحسابية
+</h3>
+<p>
+كما هو متعارف عليه في علم الرياضيات فان عمليتي القسمة والضرب تسبق كلا من عمليتي الطرح والجمع وعملية الاس تسبق عمليتي الضرب والقسمة الا اذا استخدمت الاقواس لتحديد اسبقية العمليات الحسابية. وهذه امثلة  توضح هذا المفهوم:
+</p>
+<div class="my-repl">
+  <py-repl auto-generate="true">10/2-1</py-repl>
+  </div>
+  <div class="my-repl">
+    <py-repl auto-generate="true">10**2/5+4</py-repl>
+  </div>
+  <div class="my-repl">
+      <py-repl auto-generate="true">(3+4)*2 </py-repl>
+  </div>
+  <div class="my-repl">
+        <py-repl auto-generate="true">15/(6-3) </py-repl>
+  </div>
 <h2>المتغيرات</h2>
 <p>
   المتغيرات هي اسماء تستخدم للدلالة على قيم البيانات التي يراد حفظها في ذاكرة الكمبيوتر. واستخدام المتغيرات في كتابة الأكواد البرمجية ذو أهمية قصوى بحيث لا يكاد يخلو برنامج من وجود متغير واحد أو أكثر وذلك لأنها تسهل على المبرمج تذكر البيانات باسماء يسهل حفظها بدلاً من استخدام قيم البيانات ذاتها. لإسناد قيمة الى متغير فإننا نختار اسماً مناسباً للمتغير ومن ثم نضع علامة اليساوي وأخيراً نضع القيمة المراد إسنادها للمتغير كما في المثال التالي:
@@ -220,7 +300,7 @@
 <h2>تدوين الملاحظات</h2>
 <h2>الطباعة على الشاشة</h2>
 <h2>الأحرف الكبيرة والأحرف الصغيرة</h2>
-<h2>العمليات الحسابية</h2>
+
 <h2>أنواع البيانات</h2>
 <h2>العمليات المنطقية</h2>
 <h2>ترك المسافات</h2>
