change py-repl mode to non-auto-generate

--- a/site/pages/python-basics.html
+++ b/site/pages/python-basics.html
@@ -193,8 +193,7 @@
     قم بكتابة التعليمات السابقة في البيئة التفاعلية التالية والتي تسمى PyScript REPL. هذه البيئة التفاعلية للغة بايثون تم تصميمها للعمل في متصفح الانترنت بشكل مباشر دون الحاجة الي تنصيب مفسر بايثون على الجهاز الذي تعمل عليه.
     <p>ادخل العملية الحسابية الأولى ومن ثم اضغط على زر التشغيل في اقصى اليمين (تأكد من استخدامك للارقام العربية 1,2,3,4,5 وليس الارقام الهندية ١,٢,٣,٤ عند كتابتك للعمليات الحسابية في البيئة التفاعلية ادناه):</p>
     <div class="my-repl">
-    <py-repl auto-generate="true">
-    </py-repl>
+    <py-repl auto-generate="true"></py-repl>
     </div>
   </li>
 </ol>
@@ -217,14 +216,14 @@
 مثال:
 </p>
 <div class="my-repl">
-<py-repl auto-generate="true">5+4</py-repl>
+<py-repl>5+4</py-repl>
 </div>
 <p>
   ثانياً: تسخدم علامة "-" (الشرطة الاعتيادية وليست السفلية) لاجراء عمليات الطرح
 <br>
 مثال:
 <div class="my-repl">
-  <py-repl auto-generate="true">5-4</py-repl>
+  <py-repl>5-4</py-repl>
   </div>
 </p>
 <p>
@@ -232,7 +231,7 @@
 <br>
 مثال:
 <div class="my-repl">
-  <py-repl auto-generate="true">5*4</py-repl>
+  <py-repl>5*4</py-repl>
   </div>
 </p>
 <p>
@@ -240,7 +239,7 @@
 <br>
 مثال:
 <div class="my-repl">
-  <py-repl auto-generate="true">5/4</py-repl>
+  <py-repl>5/4</py-repl>
   </div>
 </p>
 <p>
@@ -248,7 +247,7 @@
 <br>
 مثال:
 <div class="my-repl">
-  <py-repl auto-generate="true">5**4</py-repl>
+  <py-repl>5**4</py-repl>
   </div>
   <p>
     في المثال السابق تم رفع العدد 5 للقوة او الاس 4
@@ -259,7 +258,7 @@
 <br>
 مثال:
 <div class="my-repl">
-  <py-repl auto-generate="true">5//4</py-repl>
+  <py-repl>5//4</py-repl>
   </div>
 </p>
 <p>
@@ -267,7 +266,7 @@
   <br>
   مثال:
   <div class="my-repl">
-    <py-repl auto-generate="true">5%4</py-repl>
+    <py-repl>5%4</py-repl>
     </div>
 </p>
 <h3>
@@ -277,23 +276,23 @@
 كما هو متعارف عليه في علم الرياضيات فان عمليتي القسمة والضرب تسبق كلا من عمليتي الطرح والجمع وعملية الاس تسبق عمليتي الضرب والقسمة الا اذا استخدمت الاقواس لتحديد اسبقية العمليات الحسابية. وهذه امثلة  توضح هذا المفهوم:
 </p>
 <div class="my-repl">
-  <py-repl auto-generate="true">10/2-1</py-repl>
+  <py-repl>10/2-1</py-repl>
   </div>
   <div class="my-repl">
-    <py-repl auto-generate="true">10**2/5+4</py-repl>
+    <py-repl>10**2/5+4</py-repl>
   </div>
   <div class="my-repl">
-      <py-repl auto-generate="true">(3+4)*2 </py-repl>
+      <py-repl>(3+4)*2 </py-repl>
   </div>
   <div class="my-repl">
-        <py-repl auto-generate="true">15/(6-3) </py-repl>
+        <py-repl>15/(6-3) </py-repl>
   </div>
 <h2>المتغيرات</h2>
 <p>
   المتغيرات هي اسماء تستخدم للدلالة على قيم البيانات التي يراد حفظها في ذاكرة الكمبيوتر. واستخدام المتغيرات في كتابة الأكواد البرمجية ذو أهمية قصوى بحيث لا يكاد يخلو برنامج من وجود متغير واحد أو أكثر وذلك لأنها تسهل على المبرمج تذكر البيانات باسماء يسهل حفظها بدلاً من استخدام قيم البيانات ذاتها. لإسناد قيمة الى متغير فإننا نختار اسماً مناسباً للمتغير ومن ثم نضع علامة اليساوي وأخيراً نضع القيمة المراد إسنادها للمتغير كما في المثال التالي:
 </p>
 <div class="my-repl">
-<py-repl auto-generate="true">
+<py-repl>
   x=5
 </py-repl>
 </div>
